--- a/binaryTree_max_min_heap/1/1.vcxproj.filters
+++ b/binaryTree_max_min_heap/1/1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="1.c">
+    <ClCompile Include="max_heap.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
