--- a/binaryTree_max_min_heap/2/2.vcxproj
+++ b/binaryTree_max_min_heap/2/2.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="2.c" />
+    <ClCompile Include="min_heap.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
