--- a/doubly_linkedList/2/2.vcxproj
+++ b/doubly_linkedList/2/2.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="2.c" />
+    <ClCompile Include="doubly_LinkedList.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
