--- a/doubly_linkedList/2/2.vcxproj.filters
+++ b/doubly_linkedList/2/2.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="2.c">
+    <ClCompile Include="doubly_LinkedList.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
